--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Click==7.0
 Django==2.1.14
 django-cors-headers==3.2.0
+django-mysql==3.2.0
 djangorestframework==3.10.3
 PyMySQL==0.9.3
 pytz==2019.3
