feat: add judge api and django channels

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,34 @@
+asgiref==3.2.3
+attrs==19.3.0
+autobahn==20.1.2
+Automat==0.8.0
+cffi==1.13.2
+channels==2.4.0
 Click==7.0
-Django==2.1.14
+constantly==15.1.0
+cryptography==2.8
+daphne==2.4.1
+Django<3.0
 django-cors-headers==3.2.0
 django-mysql==3.2.0
 djangorestframework==3.10.3
-PyMySQL==0.9.3
+hyperlink==19.0.0
+idna==2.8
+incremental==17.5.0
+mysqlclient==1.4.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.19
+PyHamcrest==2.0.0
+pyOpenSSL==19.1.0
 pytz==2019.3
 PyYAML==5.2
 redis==3.3.11
-rq==1.1.0
+rq==1.2.0
+service-identity==18.1.0
+six==1.14.0
 sqlparse==0.3.0
+Twisted==19.10.0
+txaio==20.1.1
 uritemplate==3.0.0
+zope.interface==4.7.1
