fix dependency versions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-channels
-channels-redis
-uvicorn[standard]
+channels==2.4.0
+channels-redis==3.2.0
+uvicorn[standard]==0.13.4
 Django<3.0
-django-admin-sortable2
-django-cors-headers
+django-admin-sortable2==1.0.2
+django-cors-headers==3.10.0
 django-mysql==3.9.0
-djangorestframework
-mysqlclient
+djangorestframework==3.12.4
+mysqlclient==2.0.3
 redis==3.5.2
 rq==1.4.1
-requests
+requests==2.26.0
